[gd_scene load_steps=5 format=3 uid="uid://c5uxkakurscml"]

[ext_resource type="Texture2D" uid="uid://6pne2ccagldk" path="res://images/ui/emptybutton.png" id="1_oacfp"]
[ext_resource type="Theme" uid="uid://benif35do1jnk" path="res://theme/main.theme" id="1_xi1ir"]
[ext_resource type="Script" uid="uid://ce5uw64cpj28l" path="res://instances/entry_leaderboard.gd" id="2_8m3f5"]

[sub_resource type="LabelSettings" id="LabelSettings_xi1ir"]
font_size = 26

[node name="entry_01" type="HBoxContainer"]
offset_right = 963.0
offset_bottom = 55.0
theme = ExtResource("1_xi1ir")
theme_override_constants/separation = 24
script = ExtResource("2_8m3f5")

[node name="lb_n" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 1
text = "25"
label_settings = SubResource("LabelSettings_xi1ir")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="tex_n" type="TextureRect" parent="lb_n"]
unique_name_in_owner = true
self_modulate = Color(0.192157, 0.45098, 0.647059, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_oacfp")
expand_mode = 1
stretch_mode = 5

[node name="lb_username" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Trickylady"
autowrap_mode = 0
vertical_alignment = 1

[node name="lb_total_score" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
bbcode_enabled = true
text = "[wave][color=yellow]2340"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1
